# livraria-1

./: .gitignore  README.md  db.sqlite3  livraria_bkp.json  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py
livraria/migrations/: 0001_initial.py  0002_livro_capa.py  0003_compra.py  0004_itenscompra.py  0005_itenscompra_preco_item.py  0006_compra_data.py  0007_compra_tipo_pagamento.py
livraria/models/: autor.py  compra.py  editora.py  livro.py
livraria/serializers/: __init__.py  compra.py  editora.py  livro.py
livraria/views/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/: models.py  serializers.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py  0003_usuario_tipo_usuario.py
