[project]
name = "livraria2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "isabellirosa", email = "isabelli.ifc@gmail.com"},
]
dependencies = [
    "django>=5.0.4",
    "djangorestframework>=3.15.1",
    "django-cors-headers>=4.3.1",
    "djangorestframework-simplejwt>=5.3.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
